# deal-breaker

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: neural-training-benchmark.md  web-interface.md
scripts/: train_rl_vs_human_like_v2.py
src/dbreaker/: __init__.py
src/dbreaker/cli/: __init__.py  action_labels.py  action_menu.py  app.py  commands.py  nested_pickers.py  play.py  prompts.py  renderer.py  replay.py  tournament.py
src/dbreaker/configs/: experiment_default.yaml  official_rules.yaml  strategy_default.yaml
tests/: test_cli_ai_observation_pending.py
tests/cli/: test_action_menu.py  test_card_details.py  test_cli_logging.py  test_commands.py  test_ml_cli.py  test_play_cli.py  test_prompts.py  test_tournament_cli.py  test_web_cli.py
tests/engine/: test_actions.py  test_cards.py  test_game_flow.py  test_official_rules_integration.py  test_payment.py  test_reshuffle.py  test_rules.py  test_state_digest.py
tests/experiments/: test_benchmark.py  test_elo.py  test_metrics.py  test_neural_training_benchmark.py  test_rl_search.py  test_runner.py  test_tournament.py
tests/ml/: test_features.py  test_model.py  test_training_path.py
tests/replay/: test_replay.py  test_replay_official_game.py
tests/strategies/: test_human_like_strategy.py  test_human_like_v2_strategy.py  test_observation.py  test_random_strategy.py  test_strategy_gauntlet.py
tests/web/: test_inspector_viewer_legal_actions.py  test_web_api_boundaries.py  test_web_vertical_slice.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+118 files in other folders)
